--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>2.2.0</version>
+				<executions>
+					<execution>
+						<id>generate-license</id>
+						<goals>
+							<goal>third-party-report</goal> <!-- Use the correct goal: third-party-report -->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<finalName>dep-check</finalName>
 	</build>
