--- a/.github/workflows/dep-check.yml
+++ b/.github/workflows/dep-check.yml
@@ -20,13 +20,39 @@ jobs:
         java-version: 17
         cache: maven
 
-    - name: Build and generate license reports
-      run: |
-        mvn license:third-party-report
-        mv target report
+    - name: Add SHORT_SHA env property with commit short sha
+      run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-7`" >> $GITHUB_ENV
 
-    - name: Store license reports as artifacts
-      uses: actions/upload-artifact@v3
+    # - name: Build and generate license reports
+    #   run: |
+    #     mvn license:third-party-report
+    #     mv target report
+
+    # - name: Store license reports as artifacts
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: license-reports
+    #     path: ./report/site/
+
+    - name: Build with Maven
+      run: mvn clean install
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        name: license-reports
-        path: ./report/site/
+        username: imeshdocker
+        password: imesh@docker
+
+    - name: Docker Build & Push
+      if: success()
+      run: |
+        docker build . -t imeshdocker/dep-check:${SHORT_SHA}
+        docker push imeshdocker/dep-check:${SHORT_SHA}
+
+    - name: Install Trivy
+      uses: aquasecurity/trivy@v0.44.0  # You can replace this version with the latest available
+      with:
+        image-ref: alpine  # Choose the base image for Trivy scanning (alpine is used here as an example)
+
+    - name: Trivy Scan
+      run: trivy image --security-checks license --severity UNKNOWN,HIGH,CRITICAL imeshdocker/dep-check:${SHORT_SHA}
