--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
 	<build>
 		<plugins>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
 				<version>2.2.0</version>
@@ -67,7 +67,7 @@
                         </configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<!-- <plugin>
 				<groupId>se.ayoy.maven-plugins</groupId>
 				<artifactId>ayoy-license-verifier-maven-plugin</artifactId>
