--- a/.github/workflows/dep-check.yml
+++ b/.github/workflows/dep-check.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: imeshdocker
-        password: imesh@docker
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Docker Build & Push
       if: success()
@@ -49,18 +49,8 @@ jobs:
         docker build . -t imeshdocker/dep-check:${SHORT_SHA}
         docker push imeshdocker/dep-check:${SHORT_SHA}
 
-    # - name: Install Trivy
-    #   uses: aquasecurity/trivy@v0.44.0  # You can replace this version with the latest available
-    #   with:
-    #     image-ref: alpine  # Choose the base image for Trivy scanning (alpine is used here as an example)
-
-    # - name: Trivy Scan
-    #   run: |
-    #     sudo apt-get install trivy
-    #     trivy image --security-checks license --severity UNKNOWN,HIGH,CRITICAL imeshdocker/dep-check:${SHORT_SHA}
-
     - name: Trivy Scan
       run: |
         wget https://github.com/aquasecurity/trivy/releases/download/v0.33.0/trivy_0.33.0_Linux-64bit.deb
         sudo dpkg -i trivy_0.33.0_Linux-64bit.deb
-        trivy image --security-checks license --severity UNKNOWN,HIGH,CRITICAL imeshdocker/dep-check:${SHORT_SHA}
+        trivy image --security-checks license imeshdocker/dep-check:${SHORT_SHA}
